todoyu admin extension changelog

admin 1.1.0 - 2011-06-17
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name


admin 1.0.1 to 1.0.5 - 1.0.5 released 2011-01-17
	* Changed: Incremented year in copyright notice to 2011
	* Bugfx: Removed left-over debug output
	* Changed: Added code comments, unified ambiguous JsDoc comments
	* Feature: Added italian translation
	* Bugfix: Load module in admin ignores parameters
 	* Changed: Templates + CSS cleanup - adapted style of rights form to global look
	* Changed: Deleted unused installer files
	* Feature: Added hooks documentation
	* Feature: Added Serbian locales
	* Changed: Moved styles from global.css to ext.css
	* Feature: Added japanese translation
	* Feature: Added czech translation
	* Feature: Added dutch translation
	* Feature: Added parts of french translation
	* Feature: Added EXTKEY constant
	* Changed: Removed manual requiring of auto-loaded config files
	* Feature: Added portuguese translation
	* Changed: Fixed headlet icons positioning
	* Changed: Switched license from GPL to BSD
	* Changed: Cleaned labels
	* Changed: Moved the global $CONFIG variable to Todoyu class. Is now a public static member variable
	* Changed: Asset handling (load all in one merge file)
	* Bugfix: Headlet hide/show improvements and fixes
	* Feature: Added Rights
	* Feature: Added new version of role manager and rights editor
	* Feature: Added company quick creation
	* Feature: Added unit tests
	* Feature: Added icons to admin modules panelwidget options
	* Changed: Sub menu cleanups
	* Bugfix: Fixed wrong filenames casing
	* Bugfix: Added missing JS assets configs


admin 1.0.0 - released 2010-05-10
	* Changed: Declared state stable