@@ -31,7 +31,7 @@ Todoyu::$CONFIG['EXT']['admin']['info'] = array(
 		'company'	=> 'snowflake productions GmbH, Zurich'
 	),
 	'state' 		=> 'stable',
-	'version' 		=> '1.1.0',
+	'version' 		=> '1.1.1',
 	'constraints' 	=> array(
 		'depends' 	=> array(),
 		'conflicts' => array(),
