@@ -1,0 +1,6 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="ext.title">Administracja</label>
+	<label index="page.title">Administracja</label>
+	<label index="headlet.label">Admin</label>
+</labels>
