@@ -1,5 +1,8 @@
 todoyu admin extension changelog
 
+admin 1.1.1 - not released yet
+	* Translation: Polish
+
 admin 1.1.0 - 2011-06-17
 	* Changed: Requires core 2.1
 	* Changed: Structure for 2.1
